--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+body, html {
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#b2e1ff+0,66b6fc+100;Blue+3D+%236 */
+    background: #b2e1ff;
+    /* Old browsers */
+    background: -moz-linear-gradient(-45deg, #b2e1ff 0%, #66b6fc 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, #b2e1ff 0%, #66b6fc 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg, #b2e1ff 0%, #66b6fc 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2e1ff', endColorstr='#66b6fc', GradientType=1);
+    /* IE6-9 fallback on horizontal gradient */
+    width: 100%;
+    height: 100%;
+
+    background-attachment: fixed;
+    padding-bottom: 20px;
+}
