css update for IE

--- a/src/app/component/weather/weather.component.css
+++ b/src/app/component/weather/weather.component.css
@@ -6,7 +6,7 @@
 }
 .weather-container .row{
     border: solid 1px #bebebe;
-    background-color: #ffffffbd;
+    background-color: #FFFFFF;
     box-shadow: 0px 0px 4px 3px #c0c0c070;
     padding: 15px;
 }
